--- a/PasswordGenerator/MainWindow.xaml
+++ b/PasswordGenerator/MainWindow.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
+        <Label x:Name="lblResult" Content="Результат" HorizontalAlignment="Left" Margin="48,29,0,0" VerticalAlignment="Top" Height="40" Width="97"/>
 
     </Grid>
 </Window>
